--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -15,7 +15,51 @@
     <h1>{{ page_title }}</h1>
 
     <h2>Application Owners</h2>
-    {{ page_macros.userTable(user_types.lead, 'lead', can_remove) }}
+    {% if leads %}
+        <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
+            <thead>
+                <tr>
+                    <th class="t15">User ID</th>
+                    <th class="t20">Username</th>
+                    <th>Name</th>
+                    <th>Applications</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for type in leads %}
+                    {% set user = type.user %}
+
+                    <tr>
+                        <td><a href="{{ uriFor('user', {'user': user.id}) }}">{{ user.id }}</a></td>
+                        <td>{{ user.handle }}</td>
+                        <td>
+                            {% if is_serious_business_mode %}
+                                {{ user.name }}
+                            {% else %}
+                                {{ getUsersActualName(user) }}
+                            {% endif %}
+                        </td>
+
+                        <td>
+                            <ul>
+                            {% for perm in type.permissions %}
+                                <li>
+                                    <a href="{{ uriFor('application', {'application': perm.application.id}) }}">{{ perm.application.name }}</a>
+                                    {% if can_remove %}
+                                        <a class="btn btn--tiny btn--destructive" href="{{ uriFor('admin.permissions.type.remove', {'user': user.id, 'user_type': perm.id}) }}">Remove</a>
+                                    {% endif %}
+                                </li>
+                            {% endfor %}
+                            </ul>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>There are no users of this type.</p>
+    {% endif %}
+
 
     <h2>Deployment Adminstrators</h2>
     {{ page_macros.userTable(user_types.btn_pusher, 'btn_pusher', can_remove) }}
