--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -138,7 +138,7 @@
 
     <p>
         The same variables and environment available for builds is available during the deploy process.
-        Check out the <a href="{{ uriFor('help.deployment') }}">Deployment scripting guide</a> for more details.
+        Check out the <a href="{{ uriFor('help.scripting') }}">Deployment scripting guide</a> for more details.
     </p>
 
 {% endblock %}
