--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -7,7 +7,7 @@
     <h1>Help &amp; FAQ</h1>
 
     <a class="btn" href="{{ uriFor('help.setup') }}">Application Setup Guide</a>
-    <a class="btn" href="{{ uriFor('help.deployment') }}">Deployment Scripting Guide</a>
+    <a class="btn" href="{{ uriFor('help.scripting') }}">Deployment Scripting Guide</a>
 
     <ul class="list--bare">
         <li class="trailer">
@@ -104,7 +104,7 @@
             <b>Add a <code>.hal9000.yml</code> configuration file to your project.</b>
             <p>
                 The hal configuration file is used to tell Hal how to build and deploy your application.
-                Please see <a href="{{ uriFor('help.deployment') }}">deployment scripting guide</a> for full details.
+                Please see <a href="{{ uriFor('help.scripting') }}">deployment scripting guide</a> for full details.
             </p>
         </li>
         <li>
@@ -139,7 +139,7 @@
         But be careful! This involves writing your own scripts and requires engineering.
     </p>
 
-    <p>Read more in the <a href="{{ uriFor('help.deployment') }}">deployment scripting guide</a>.</p>
+    <p>Read more in the <a href="{{ uriFor('help.scripting') }}">deployment scripting guide</a>.</p>
 
     <h3 id="dotnet-support">{{ macros.status_icon('Does Hal support .NET applications?') }}</h3>
     <p>Hal can deploy any application to AWS-based deployment targets such as Elastic Beanstalk and CodeDeploy including both linux and windows-based applications.</p>
@@ -164,7 +164,7 @@
         This ensures reproducible builds by having a fresh container with consistent system configuration for every build.
         Applications can even use a custom, dedicated container if needed.
     </p>
-    <p>Read more in the <a href="{{ uriFor('help.deployment') }}">deployment scripting guide</a>.</p>
+    <p>Read more in the <a href="{{ uriFor('help.scripting') }}">deployment scripting guide</a>.</p>
 
     <h3 id="encrypted-configuration">{{ macros.status_icon('Does Hal support encrypted configuration?') }}</h3>
     <p>
@@ -174,7 +174,7 @@
     <p>
         Administrators and Project Leads can add encrypted properties from the Application page. Values can be stored for individual environments, or globally so they can be used in every environment.
     </p>
-    <p>See in the <a href="{{ uriFor('help.deployment') }}">deployment scripting guide for engineers</a> for more details on how to read these values when they are decrypted during the build process.</p>
+    <p>See in the <a href="{{ uriFor('help.scripting') }}">deployment scripting guide for engineers</a> for more details on how to read these values when they are decrypted during the build process.</p>
 
     <h3 id="app-dependencies">{{ macros.status_icon('My application needs a specific library or software installed to build. What do I do?') }}</h3>
     <p>
