Improve no deployers messaging

--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -79,7 +79,9 @@
 
             </div>
         {% else %}
-            No users have deployment or management permissions. Deployment permissions are only handled by GitHub.
+            <hr>
+            No users currently have deployment or management permissions. Deployment permissions are only handled by GitHub.
+            Contact an administratorif you would like to self-service and manage your application.
         {% endif %}
 
         <hr>
