--- a/templates/permissions/permissions.twig
+++ b/templates/permissions/permissions.twig
@@ -19,9 +19,8 @@
         <table class="table--spacing-medium table--striped" data-tablesaw-mode="stack">
             <thead>
                 <tr>
-                    <th class="t15">User ID</th>
                     <th class="t20">Username</th>
-                    <th>Name</th>
+                    <th>Email</th>
                     <th>Applications</th>
                 </tr>
             </thead>
@@ -30,24 +29,18 @@
                     {% set user = type.user %}
 
                     <tr>
-                        <td><a href="{{ uriFor('user', {'user': user.id}) }}">{{ user.id }}</a></td>
-                        <td>{{ user.handle }}</td>
-                        <td>
-                            {% if is_serious_business_mode %}
-                                {{ user.name }}
-                            {% else %}
-                                {{ getUsersActualName(user) }}
-                            {% endif %}
-                        </td>
+                        <td><a href="{{ uriFor('user', {'user': user.id}) }}">{{ user.handle }}</a></td>
+                        <td>{{ user.email }}</td>
 
                         <td>
                             <ul>
                             {% for perm in type.permissions %}
                                 <li>
-                                    {% if can_remove %}
-                                        <a class="btn btn--tiny btn--destructive" href="{{ uriFor('admin.permissions.type.remove', {'user': user.id, 'user_type': perm.id}) }}">Remove</a>
-                                    {% endif %}
                                     <a href="{{ uriFor('application', {'application': perm.application.id}) }}">{{ perm.application.name }}</a>
+                                    {% if can_remove %}
+                                        (<a style="color:red;" href="{{ uriFor('admin.permissions.type.remove', {'user': user.id, 'user_type': perm.id}) }}">Remove</a>)
+                                    {% endif %}
+
                                 </li>
                             {% endfor %}
                             </ul>
