Refactor permissions page to eliminate need for separate deployment permissions page

--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -54,7 +54,7 @@
     </ul>
 
     {% if isUserSuper(current_user) %}
-        <h2 class="leader">Super Administrators</h2>
+        <h2 class="leader">Manage Hal System</h2>
         <ul class="button-list">
             <li><a href="{{ uriFor('super.system') }}" class="btn">Build System Status</a></li>
             <li><a href="{{ uriFor('super.caches') }}" class="btn">Cache Management</a></li>
