Fix bug in template function

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -155,7 +155,7 @@
         <li>R Sync (On-premise unix servers)</li>
     </ul>
     <p>
-        Looking for help setting up these technologies? Check out the <a href="{{ urlFor('help.setup') }}">application setup guide</a>.
+        Looking for help setting up these technologies? Check out the <a href="{{ uriFor('help.setup') }}">application setup guide</a>.
     </p>
 
     <h3 id="docker-support">{{ macros.status_icon('Does Hal support Docker?') }}</h3>
