--- a/templates/permissions/deployment.remove.twig
+++ b/templates/permissions/deployment.remove.twig
@@ -41,7 +41,7 @@
     <form class="form-wrapper" method="post">
         <ul class="button-list">
             <li><input class="btn btn--destructive" type="submit" value="Remove"></li>
-            <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('admin.permissions.deployment') }}">Cancel</a></li>
+            <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ uriFor('admin.permissions') }}">Cancel</a></li>
         </ul>
     </form>
 
