Switch to sasslintrc

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,83 +1,83 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 
 // vendor bullshit
-@import "compass-mixins/lib/compass";
-@import "modularscale-sass/stylesheets/modular-scale";
-@import "breakpoint-sass/stylesheets/breakpoint";
+@import 'compass-mixins/lib/compass';
+@import 'modularscale-sass/stylesheets/modular-scale';
+@import 'breakpoint-sass/stylesheets/breakpoint';
 
 // Settings, variables
-@import "settings-colors";
-@import "settings";
+@import 'settings-colors';
+@import 'settings';
 
 // more vendor bullshit
-@import "scales-utilities-normalize/normalize";
-@import "scales-utilities-reset/reset";
-@import "scales-utilities-clearfix/clearfix";
+@import 'scales-utilities-normalize/normalize';
+@import 'scales-utilities-reset/reset';
+@import 'scales-utilities-clearfix/clearfix';
 
-@import "scales-base-typography/typography";
-@import "scales-base-images/images";
-@import "scales-base-lists/lists";
-@import "scales-base-forms/forms";
-@import "scales-base-tables/tables";
+@import 'scales-base-typography/typography';
+@import 'scales-base-images/images';
+@import 'scales-base-lists/lists';
+@import 'scales-base-forms/forms';
+@import 'scales-base-tables/tables';
 
-@import "scales-patterns-box/box";
-@import "scales-patterns-vertical-list/vertical-list";
-@import "scales-patterns-flag/flag";
-@import "scales-patterns-buttons/buttons";
-@import "scales-patterns-split/split";
+@import 'scales-patterns-box/box';
+@import 'scales-patterns-vertical-list/vertical-list';
+@import 'scales-patterns-flag/flag';
+@import 'scales-patterns-buttons/buttons';
+@import 'scales-patterns-split/split';
 
-@import "scales-overrides-size/size";
-@import "scales-overrides-spacing/spacing";
+@import 'scales-overrides-size/size';
+@import 'scales-overrides-spacing/spacing';
 
-@import "hint.css/src/hint";
-@import "tablesaw/dist/stackonly/tablesaw.stackonly.scss";
+@import 'hint.css/src/hint';
+@import 'tablesaw/dist/stackonly/tablesaw.stackonly.scss';
 
 // Utilities
-@import "utilities/functions";
-@import "utilities/mixins";
-@import "utilities/misc";
-@import "utilities/placeholders";
+@import 'utilities/functions';
+@import 'utilities/mixins';
+@import 'utilities/misc';
+@import 'utilities/placeholders';
 
 // Base
-@import "base/global";
+@import 'base/global';
 
-@import "base/code";
-@import "base/error";
-@import "base/forms";
-@import "base/headings";
-@import "base/links";
-@import "base/list";
-@import "base/tables";
-@import "base/time";
-@import "base/quotes";
+@import 'base/code';
+@import 'base/error';
+@import 'base/forms';
+@import 'base/headings';
+@import 'base/links';
+@import 'base/list';
+@import 'base/tables';
+@import 'base/time';
+@import 'base/quotes';
 
 // App
-@import "app/global";
+@import 'app/global';
 
-@import "app/cards";
-@import "app/dash-box";
-@import "app/grid";
-@import "app/hal-header";
-@import "app/help";
-@import "app/icons";
-@import "app/github";
-@import "app/radio-grid";
-@import "app/search";
-@import "app/tabs";
+@import 'app/cards';
+@import 'app/dash-box';
+@import 'app/grid';
+@import 'app/hal-header';
+@import 'app/help';
+@import 'app/icons';
+@import 'app/github';
+@import 'app/radio-grid';
+@import 'app/search';
+@import 'app/tabs';
 
 // Components
-@import "patterns/alert-bar";
-@import "patterns/buttons";
-@import "patterns/check-box";
-@import "patterns/list";
-@import "patterns/nav";
-@import "patterns/pagination";
-@import "patterns/scroll-thing";
-@import "patterns/split";
-@import "patterns/status";
-@import "patterns/loading-bar";
-@import "patterns/stars";
+@import 'patterns/alert-bar';
+@import 'patterns/buttons';
+@import 'patterns/check-box';
+@import 'patterns/list';
+@import 'patterns/nav';
+@import 'patterns/pagination';
+@import 'patterns/scroll-thing';
+@import 'patterns/split';
+@import 'patterns/status';
+@import 'patterns/loading-bar';
+@import 'patterns/stars';
 
 // must go last!
-@import "app/js";
-@import "app/js.tablesaw";
+@import 'app/js';
+@import 'app/js.tablesaw';
